feat: add header style

--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 </head>
 
 <body>
-
+  <div class="container">
+    <header class="header-container">
+      <h1>Library</h1>
+      <button class="btn">New Book</button>
+    </header>
+    <main class="main-container"></main>
+  </div>
 </body>
 
 </html>
