--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
-  <script src="./script.js" defer></script>
+  <script src="./script/script.js" defer></script>
 </head>
 
 <body>
@@ -21,6 +21,29 @@
     </header>
     <main class="main-container"></main>
   </div>
+  <dialog class="book-form-dialog">
+    <div class="dialog-header">
+      <h2>Add a New Book</h2>
+      <button class="close-btn">&times;</button>
+    </div>
+    <form class="book-form">
+      <label for="title">Title</label>
+      <input type="text" id="title" name="title" placeholder="Book Title" required />
+      <label for="author">Author</label>
+      <input type="text" id="author" name="author" placeholder="Author Name" required />
+      <label for="pages">Pages</label>
+      <input type="number" id="pages" name="pages" placeholder="Number of Pages" required min="1" />
+      <label for="read">Read</label>
+      <select id="read" name="read">
+        <option value="true">Yes</option>
+        <option value="false">No</option>
+      </select>
+      <div class="form-buttons">
+        <button type="submit" class="btn">Add Book</button>
+        <button type="button" class="btn cancel-btn">Cancel</button>
+      </div>
+    </form>
+  </dialog>
 </body>
 
 </html>
